# ram-machine

./: CMakeLists.txt  a.ram  i.tape  readme.md
include/: memory.h  program.h  program_counter.h  program_ram.h  ram.h  regular_expresions.h  tape.h
include/exceptions/: instruction_exception.h  io_exception.h  ram_exception.h
include/instructions/: add.h  div.h  halt.h  instruction.h  instruction_header.h  jgtz.h  jump.h  jzero.h  load.h  mult.h  read.h  store.h  sub.h  write.h
src/: main.cc  program.cc  program_counter.cc  program_ram.cc  ram.cc  tape.cc
src/instructions/: add.cc  div.cc  halt.cc  instruction.cc  jgtz.cc  jump.cc  jzero.cc  load.cc  mult.cc  read.cc  store.cc  sub.cc  write.cc
tests/: memory_test.cc  program_counter_test.cc  tape_test.cc
tests/rams/: nn-log.ram  nn.ram  o.tape  test1.ram  test2.ram  test3.ram  test4.ram  test5.ram  test6.ram  test7.ram
tests/tapes/: o.tape  tape7.tape
